<?xml version="1.0" encoding="UTF-8"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>2.0.1.RELEASE</version>
    <relativePath></relativePath>
  </parent>
  <groupId>io.jwt.aa</groupId>
  <artifactId>springboot-jwt-opa-example</artifactId>
  <version>0.0.1</version>
  <name>springboot-jwt-opa-example</name>
  <description>Spring Boot example with JWT, Authentication and Authorization with REST endpoint</description>
  <properties>
    <springfox-swagger2.version>2.9.2</springfox-swagger2.version>
    <java.version>1.8</java.version>
    <version.jacoco-maven-plugin>0.8.2</version.jacoco-maven-plugin>
    <jacoco.complexity-coverage>0.90</jacoco.complexity-coverage>
    <spring-security-oauth2-autoconfigure.version>2.0.1.RELEASE</spring-security-oauth2-autoconfigure.version>
    <version.findbugs-jsr305>3.0.5</version.findbugs-jsr305>
    <sonar-maven-plugin.version>3.6.0.1398</sonar-maven-plugin.version>
    <feign-okhttp.version>9.3.1</feign-okhttp.version>
    <version.maven-checkstyle-plugin>3.0.0</version.maven-checkstyle-plugin>
    <mockito-all.version>1.9.5</mockito-all.version>
    <jacoco.line-coverage>0.90</jacoco.line-coverage>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <version.maven-compiler-plugin>3.8.0</version.maven-compiler-plugin>
    <jacoco.branch-coverage>0.70</jacoco.branch-coverage>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <version.maven-surefire-plugin>2.20</version.maven-surefire-plugin>
  </properties>
  <dependencies>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-security</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.security.oauth.boot</groupId>
      <artifactId>spring-security-oauth2-autoconfigure</artifactId>
      <version>${spring-security-oauth2-autoconfigure.version}</version>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-web</artifactId>
    </dependency>
    <dependency>
      <groupId>io.springfox</groupId>
      <artifactId>springfox-swagger2</artifactId>
      <version>${springfox-swagger2.version}</version>
    </dependency>
    <dependency>
      <groupId>io.springfox</groupId>
      <artifactId>springfox-swagger-ui</artifactId>
      <version>${springfox-swagger2.version}</version>
    </dependency>
    <dependency>
      <groupId>io.springfox</groupId>
      <artifactId>springfox-bean-validators</artifactId>
      <version>${springfox-swagger2.version}</version>
    </dependency>
    <dependency>
      <groupId>io.github.openfeign</groupId>
      <artifactId>feign-okhttp</artifactId>
      <version>${feign-okhttp.version}</version>
    </dependency>
    <dependency>
      <groupId>io.github.openfeign</groupId>
      <artifactId>feign-gson</artifactId>
      <version>${feign-okhttp.version}</version>
    </dependency>
    <dependency>
      <groupId>io.github.openfeign</groupId>
      <artifactId>feign-slf4j</artifactId>
      <version>${feign-okhttp.version}</version>
    </dependency>
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.springframework.security</groupId>
      <artifactId>spring-security-test</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-all</artifactId>
      <version>${mockito-all.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
  <build>
    <plugins>
      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>org.sonarsource.scanner.maven</groupId>
        <artifactId>sonar-maven-plugin</artifactId>
        <version>${sonar-maven-plugin.version}</version>
      </plugin>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${version.maven-compiler-plugin}</version>
        <configuration>
          <source>${java.version}</source>
          <target>${java.version}</target>
          <showWarnings>true</showWarnings>
          <compilerArgs>
            <arg>-Xlint:all</arg>
          </compilerArgs>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-checkstyle-plugin</artifactId>
        <version>${version.maven-checkstyle-plugin}</version>
        <executions>
          <execution>
            <id>checkstyle-compile</id>
            <phase>validate</phase>
            <goals>
              <goal>check</goal>
            </goals>
            <inherited>true</inherited>
            <configuration>
              <configLocation>checkstyle.xml</configLocation>
              <encoding>UTF-8</encoding>
              <consoleOutput>true</consoleOutput>
              <failsOnError>true</failsOnError>
              <suppressionsLocation>checkstyle-suppression.xml</suppressionsLocation>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>findbugs-maven-plugin</artifactId>
        <version>${version.findbugs-jsr305}</version>
        <executions>
          <execution>
            <id>findbugs</id>
            <phase>verify</phase>
            <goals>
              <goal>check</goal>
            </goals>
            <inherited>true</inherited>
          </execution>
        </executions>
        <configuration>
          <effort>Max</effort>
          <failOnError>true</failOnError>
          <threshold>Low</threshold>
          <xmlOutput>true</xmlOutput>
          <findbugsXmlOutputDirectory>${project.build.directory}/target/findbugs</findbugsXmlOutputDirectory>
          <excludeFilterFile>findbugs-exclude.xml</excludeFilterFile>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>${version.jacoco-maven-plugin}</version>
        <executions>
          <execution>
            <id>default-prepare-agent</id>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
            <inherited>true</inherited>
          </execution>
          <execution>
            <id>default-report</id>
            <phase>prepare-package</phase>
            <goals>
              <goal>report</goal>
            </goals>
            <inherited>true</inherited>
          </execution>
          <execution>
            <id>default-check</id>
            <goals>
              <goal>check</goal>
            </goals>
            <inherited>true</inherited>
            <configuration>
              <rules>
                <rule>
                  <element>BUNDLE</element>
                  <limits>
                    <limit>
                      <counter>LINE</counter>
                      <value>COVEREDRATIO</value>
                      <minimum>${jacoco.line-coverage}</minimum>
                    </limit>
                    <limit>
                      <counter>BRANCH</counter>
                      <value>COVEREDRATIO</value>
                      <minimum>${jacoco.branch-coverage}</minimum>
                    </limit>
                    <limit>
                      <counter>COMPLEXITY</counter>
                      <value>COVEREDRATIO</value>
                      <minimum>${jacoco.complexity-coverage}</minimum>
                    </limit>
                  </limits>
                </rule>
              </rules>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${version.maven-surefire-plugin}</version>
        <executions>
          <execution>
            <phase>test</phase>
            <goals>
              <goal>test</goal>
            </goals>
            <inherited>true</inherited>
            <configuration>
              <argLine>-Xmx1024m -Xms1024m -XX:MaxPermSize=512m</argLine>
              <useSystemClassLoader>false</useSystemClassLoader>
              <forkCount>0</forkCount>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>
